# django-class-2410

./: pyproject.toml  test.py
core/: settings.py  urls.py
first/: views.py
first/templates/: _alert.html  say_hello.html
templates/: base.html
todo/: models.py  views.py
todo/migrations/: 0001_initial.py  0002_item_end_time.py
todo/templates/: todo_list.html
